tests/smt2/error/sort_mismatch2.smt2
(declare-sort S1)
(declare-fun f (Bool) S1)
(assert (f true))